OO-5122: replace & by && (blocker for sonar)