@@ -245,7 +245,7 @@ public class HotspotChoiceScoreController extends AssessmentItemRefEditorControl
 
 	@Override
 	protected boolean validateFormLogic(UserRequest ureq) {
-		boolean allOk = true;
+		boolean allOk = super.validateFormLogic(ureq);
 		allOk &= validateMinMaxScores(minScoreEl, maxScoreEl);
 
 		if(assessmentModeEl.isOneSelected() && assessmentModeEl.isSelected(1)) {
@@ -254,7 +254,7 @@ public class HotspotChoiceScoreController extends AssessmentItemRefEditorControl
 			}
 		}
 		
-		return allOk & super.validateFormLogic(ureq);
+		return allOk;
 	}
 
 	@Override
@@ -282,7 +282,7 @@ public class HotspotChoiceScoreController extends AssessmentItemRefEditorControl
 			itemBuilder.clearMapping();
 			for(HotspotChoiceWrapper wrapper:wrappers) {
 				String pointsStr = wrapper.getPointsEl().getValue();
-				Double points = new Double(pointsStr);
+				Double points = Double.valueOf(pointsStr);
 				itemBuilder.setMapping(wrapper.getChoice().getIdentifier(), points);
 			}
 		} else {
